--- a/halam_ketiga.html
+++ b/halam_ketiga.html
@@ -24,7 +24,7 @@
     class="flex justify-center h-screen items-center"
   >
     <audio autoplay loop>
-      <source src="sempurna.MP3" type="audio/mpeg" />
+      <source src="sempurna.mp3" type="audio/mpeg" />
     </audio>
 
     <div
