--- a/halaman_keempat.html
+++ b/halaman_keempat.html
@@ -65,7 +65,7 @@
       ketikTeks();
 
       function ubahKartu() {
-        window.location.href = "ucapan_ulang_tahun.html";
+        window.location.href = "index.html";
       }
 
       function tutupJendela() {
